--- a/skeleton/quickstart/README
+++ b/skeleton/quickstart/README
@@ -1,9 +1,9 @@
-=============================================
-Quickstart for an itools.cms Web application
-=============================================
+=========================================
+Quickstart for an iKaaro Web application
+=========================================
 
-This quickstart "${PACKAGE_NAME}" is a sample itools.cms package, it provide:
-  - the skeleton of a itools.cms Web Application
+This quickstart "${PACKAGE_NAME}" is a sample iKaaro package, it provide:
+  - the skeleton of a iKaaro Web Application
   - a mywebapp.tgz tarball with a piece of database to populate your application
   - illustration of the multisite feature : severals hostnames managed with one
     website.
@@ -17,7 +17,7 @@ option::
   * Package "${PACKAGE_NAME}" created
   * ...
 
-Setup an itools.cms Web application ${PACKAGE_NAME}
+Setup an iKaaro Web application ${PACKAGE_NAME}
 ========================================================
 
 Enter in your newly created package folder::
@@ -50,7 +50,7 @@ Edit the config.conf file (to informe the myDB database about your package)::
 
 Starts a web server that publishes the database instance::
 
-  $ ${ICMS_START} myDB
+  $ ${ICMS_START} -d myDB
 
 Point firefox  to::
 
@@ -66,7 +66,7 @@ the server::
   $ tar -xzf ${PACKAGE}/data/mywebapp.tgz -C myDB/database
 
   $ ${ICMS_UPDATE_CATALOG} myDB
-  $ ${ICMS_START} myDB
+  $ ${ICMS_START} -d myDB
 
 The database is a filesystem tree::
 
@@ -74,22 +74,24 @@ The database is a filesystem tree::
   |-- contact-form
   |-- contact-form.metadata
   |-- home
-  |   |-- left.xhtml
+  |   |-- left.xhtml.en
   |   |-- left.xhtml.metadata
-  |   |-- right.xhtml
+  |   |-- right.xhtml.en
   |   `-- right.xhtml.metadata
   |-- home.metadata
   |-- ikaaro
   |-- ikaaro.metadata
   |-- techno
   |   |-- git
-  |   |   |-- index.xhtml
+  |   |   |-- index.xhtml.en
   |   |   `-- index.xhtml.metadata
   |   |-- git.metadata
-  |   |-- index.xhtml
+  |   |-- index.xhtml.en
   |   |-- index.xhtml.metadata
   |   |-- python
-  |   |   |-- index.xhtml
+  |   |   |-- image
+  |   |   |-- image.metadata
+  |   |   |-- index.xhtml.en
   |   |   `-- index.xhtml.metadata
   |   `-- python.metadata
   `-- techno.metadata
