--- a/RELEASE-0.20.2
+++ b/RELEASE-0.20.2
@@ -1,5 +1,5 @@
 
-ikaaro 0.20.2 (2008/01/XX)
+ikaaro 0.20.2 (2008/01/21)
 ==========================
 
 This is a Content Management System built on Python & itools, among
@@ -18,11 +18,12 @@ recorded in the events log.
 The tracker has a new field named "CC", so any user in the "CC" list
 will be notified with an email every time the issue changes.
 
-Every file object has a new view named "backlinks", which shows the
-list of objects that reference this file.
+There are three new views: "backlinks", "orphans" and "broken_links".
+Useful for maintenance purposes, these views leverage the mechanism
+for referencial integrity introduced in the previous release.
 
-Many bugs have been fixed, including #108, #205, #207, #215, #222, #224,
-#225, #227, #228, #230 and #231.
+Many bugs have been fixed, including #108, #205, #207, #215, #222,
+#224, #225, #227, #228, #230, #231, #238, #239 and #240.
 
 
 Resources
