--- a/RELEASE-0.20.3
+++ b/RELEASE-0.20.3
@@ -1,5 +1,5 @@
 
-ikaaro 0.20.3 (2008/02/0X)
+ikaaro 0.20.3 (2008/02/06)
 ==========================
 
 This is a Content Management System built on Python & itools, among
