--- a/RELEASE-0.20.4
+++ b/RELEASE-0.20.4
@@ -9,7 +9,7 @@ other features ikaaro provides:
  - multilingual user interfaces and content
  - high level modules: wiki, forum, tracker, etc.
 
-This release brings a number of usability enhacements.  Most important,
+This release brings a number of usability enhancements.  Most important,
 the old HTML editor derived from Epoz [1] has been replaced by TinyMCE
 [2].
 
