Get ready to release 0.20.6

--- a/RELEASE-0.20.6
+++ b/RELEASE-0.20.6
@@ -1,5 +1,5 @@
 
-ikaaro 0.20.6 (2008/07/2X)
+ikaaro 0.20.6 (2008/07/22)
 ==========================
 
 This is a Content Management System built on Python & itools, among
@@ -13,18 +13,22 @@ This is a bug-fix release.  Among others, there are several fixes for
 the tracker and for sending emails.  Also, TinyMCE has been upgraded
 to the 3.0.9 version.
 
+But maybe most important is the move of the web site to a new domain
+name, now http://www.hforge.org/ will be hosting ikaaro and related
+projects.
+
 
 Resources
 ---------
 
 Download
-http://download.ikaaro.org/ikaaro/ikaaro-0.20.6.tar.gz
+http://download.hforge.org/ikaaro/ikaaro-0.20.6.tar.gz
 
 Home
-http://www.ikaaro.org/ikaaro
+http://www.hforge.org/ikaaro
 
 Mailing list
-http://www.ikaaro.org/community/
+http://www.hforge.org/community/
 http://archives.hforge.org/index.cgi?list=itools
 
 Bug Tracker
