--- a/locale/es.po
+++ b/locale/es.po
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
-"POT-Creation-Date: 2008-10-13 18:10+CET\n"
+"POT-Creation-Date: 2008-10-14 09:10+CET\n"
 "PO-Revision-Date: 2006-12-06 16:23+0100\n"
 "Last-Translator: J. David Ibáñez <jdavid@itaapy.com>\n"
 "Language-Team: Spanish\n"
@@ -56,7 +56,7 @@ msgid "${DESCRIPTION}"
 msgstr ""
 
 #: ../ui/folder/browse_image.xml.en:62 ../ui/generic/browse_table.xml.en:44
-msgctxt "input[value]"
+msgctxt "button"
 msgid "${action/value}"
 msgstr ""
 
@@ -493,7 +493,7 @@ msgid "${state}"
 msgstr ""
 
 #: ../ui/auto_form.xml.en:27
-msgctxt "input[value]"
+msgctxt "button"
 msgid "${submit_value}"
 msgstr ""
 
@@ -950,7 +950,8 @@ msgstr "Agregar"
 #: ../ui/base/new_instance.xml.en:22
 #: ../future/ui/dressable_add_image.xml.en:20
 #: ../ui/ical/edit_timetables.xml.en:37
-msgctxt "input[value]"
+#, fuzzy
+msgctxt "button"
 msgid "Add"
 msgstr "Agregar"
 
@@ -1013,13 +1014,13 @@ msgstr "Añadir un Nuevo Usuario"
 
 #: ../ui/access/add_user.xml.en:35
 #, fuzzy
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Add and return"
 msgstr "Agregar y regresar"
 
 #: ../ui/access/add_user.xml.en:33
 #, fuzzy
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Add and view"
 msgstr "Agregar y ver"
 
@@ -1076,7 +1077,7 @@ msgid "Are you sure you want to delete this resource?"
 msgstr ""
 
 #: ../tracker/ui/edit_resources.xml.en:50
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Assign"
 msgstr ""
 
@@ -1225,7 +1226,8 @@ msgid "Calendar"
 msgstr "Calendario"
 
 #: ../ui/ical/edit_event.xml.en:133
-msgctxt "input[value]"
+#, fuzzy
+msgctxt "button"
 msgid "Cancel"
 msgstr "Cancelar"
 
@@ -1246,7 +1248,7 @@ msgstr ""
 #: ../ui/WorkflowAware_state.xml.en:30 ../ui/text/edit.xml.en:12
 #: ../ui/PO_edit.xml.en:37 ../ui/website/contact_options.xml.en:21
 #, fuzzy
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Change"
 msgstr "Modificar"
 
@@ -1268,7 +1270,7 @@ msgstr "Modificar"
 
 #: ../ui/website/edit_languages.xml.en:36
 #, fuzzy
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Change default"
 msgstr "Modificar"
 
@@ -1511,7 +1513,7 @@ msgid "Define the domain names for this Web Site."
 msgstr ""
 
 #: ../ui/ical/edit_event.xml.en:131
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Definitely remove"
 msgstr ""
 
@@ -1575,7 +1577,7 @@ msgstr "Editar"
 
 #: ../tracker/ui/edit_issue.xml.en:110
 #, fuzzy
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Edit"
 msgstr "Editar"
 
@@ -1618,7 +1620,7 @@ msgstr "Seguridad"
 
 #: ../tracker/ui/change_bugs.xml.en:81
 #, fuzzy
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Edit Issues"
 msgstr "Seguridad"
 
@@ -1748,7 +1750,7 @@ msgstr ""
 
 #: ../tracker/ui/export_to_csv.xml.en:25
 #, fuzzy
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Export"
 msgstr "Editar Texto"
 
@@ -1774,7 +1776,7 @@ msgstr "Editor Externo"
 
 #: ../ui/text/externaledit.xml.en:39 ../ui/file/externaledit.xml.en:25
 #, fuzzy
-msgctxt "input[value]"
+msgctxt "button"
 msgid "External Editor..."
 msgstr "Editor Externo..."
 
@@ -1820,7 +1822,8 @@ msgid "Folder"
 msgstr "Carpeta"
 
 #: ../tracker/ui/menu_remember.xml.en:20
-msgctxt "input[value]"
+#, fuzzy
+msgctxt "button"
 msgid "Forget this Search"
 msgstr "Olvidar esta Búsqueda"
 
@@ -1881,7 +1884,7 @@ msgid "German"
 msgstr ""
 
 #: ../tracker/ui/menu_goto.xml.en:11
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Go"
 msgstr ""
 
@@ -2184,7 +2187,8 @@ msgid "Location:"
 msgstr "Acción"
 
 #: ../ui/base/login.xml.en:21
-msgctxt "input[value]"
+#, fuzzy
+msgctxt "button"
 msgid "Log in"
 msgstr "Identificarse"
 
@@ -2388,9 +2392,10 @@ msgid "Next"
 msgstr "Texto"
 
 #: ../ui/user/confirm_registration.xml.en:38
-msgctxt "input[value]"
+#, fuzzy
+msgctxt "button"
 msgid "Next"
-msgstr "Siguiente"
+msgstr "Texto"
 
 #: ../ui/root/credits.xml.en:19
 msgctxt "li"
@@ -2473,7 +2478,7 @@ msgstr ""
 #: ../ui/ical/edit_event.xml.en:130 ../tracker/ui/menu_remember.xml.en:15
 #: ../ui/folder/browse_search.xml.en:24 ../ui/generic/browse_search.xml.en:16
 #: ../ui/website/search_form.xml.en:11
-msgctxt "input[value]"
+msgctxt "button"
 msgid "OK"
 msgstr ""
 
@@ -2843,7 +2848,7 @@ msgstr ""
 #: ../forum/ui/Thread_view.xml.en:33 ../ui/website/edit_languages.xml.en:38
 #: ../ui/ical/edit_timetables.xml.en:43
 #, fuzzy
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Remove"
 msgstr "Renombrar"
 
@@ -2858,7 +2863,7 @@ msgstr "Renombrar"
 
 #: ../ui/folder/rename.xml.en:20
 #, fuzzy
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Rename"
 msgstr "Renombrar"
 
@@ -2886,7 +2891,7 @@ msgstr "Revisores"
 
 #: ../ui/file/upload.xml.en:20
 #, fuzzy
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Replace"
 msgstr "Revisores"
 
@@ -2897,7 +2902,7 @@ msgstr "Revisores"
 
 #: ../forum/ui/Thread_view.xml.en:44
 #, fuzzy
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Reply"
 msgstr "Revisores"
 
@@ -3038,12 +3043,12 @@ msgstr ""
 
 #: ../wiki/ui/edit.xml.en:174
 #, fuzzy
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Save"
 msgstr "Estado"
 
 #: ../wiki/ui/edit.xml.en:175
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Save &amp; View"
 msgstr ""
 
@@ -3055,7 +3060,7 @@ msgstr "Guardar Cambios"
 #: ../ui/website/security_policy.xml.en:26
 #: ../ui/user/edit_preferences.xml.en:19
 #, fuzzy
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Save Changes"
 msgstr "Guardar Cambios"
 
@@ -3068,7 +3073,8 @@ msgid "Search"
 msgstr "Buscar"
 
 #: ../tracker/ui/search.xml.en:94
-msgctxt "input[value]"
+#, fuzzy
+msgctxt "button"
 msgid "Search"
 msgstr "Buscar"
 
@@ -3673,18 +3679,18 @@ msgstr "Lista Ordenada"
 #: ../ui/ical/edit_timetables.xml.en:44
 #: ../ui/access/edit_membership_form.xml.en:18
 #, fuzzy
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Update"
 msgstr "Actualizar"
 
 #: ../tracker/ui/export_to_text.xml.en:20
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Update text export"
 msgstr ""
 
 #: ../future/ui/dressable_edit_image.xml.en:27
 #: ../ui/file/new_instance.xml.en:22
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Upload"
 msgstr ""
 
@@ -3719,12 +3725,12 @@ msgid "Upload an image to the current folder and insert it:"
 msgstr ""
 
 #: ../ui/html/addimage.xml.en:87
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Upload and Insert"
 msgstr ""
 
 #: ../ui/html/addlink.xml.en:131
-msgctxt "input[value]"
+msgctxt "button"
 msgid "Upload and Link"
 msgstr ""
 
@@ -4110,6 +4116,38 @@ msgctxt "td"
 msgid "⇒ ${item/parent_path}"
 msgstr ""
 
+#~ msgctxt "input[value]"
+#~ msgid "Add"
+#~ msgstr "Agregar"
+
+#, fuzzy
+#~ msgctxt "input[value]"
+#~ msgid "Edit"
+#~ msgstr "Editar"
+
 #~ msgctxt "label"
 #~ msgid "Email Address"
 #~ msgstr "Dirección de correo electrónico"
+
+#~ msgctxt "input[value]"
+#~ msgid "Next"
+#~ msgstr "Siguiente"
+
+#, fuzzy
+#~ msgctxt "input[value]"
+#~ msgid "Rename"
+#~ msgstr "Renombrar"
+
+#, fuzzy
+#~ msgctxt "input[value]"
+#~ msgid "Replace"
+#~ msgstr "Revisores"
+
+#, fuzzy
+#~ msgctxt "input[value]"
+#~ msgid "Save Changes"
+#~ msgstr "Guardar Cambios"
+
+#~ msgctxt "input[value]"
+#~ msgid "Search"
+#~ msgstr "Buscar"
